tenzir/bats/data/reference/pipelines_local/test_apply_operator/step_02.ref
error: could not find `/tmp/does_not_exist.tql`
 --> <input>:1:7
  |
1 | apply /tmp/does_not_exist
  |       ^^^^^^^^^^^^^^^^^^^ 
  |